fix spacing, update syntax and move starwars specific css

--- a/pegasus/sites.v3/code.org/public/css/starwars.css
+++ b/pegasus/sites.v3/code.org/public/css/starwars.css
@@ -1,3 +1,7 @@
+#starwars-mobile-image {
+  background-image: url(/images/fit-520/starwars_carousel_background.jpg);
+}
+
 .starwars-container {
   width: 100%;
   padding-left: 5px;
