--- a/pegasus/sites.v3/code.org/public/css/tutorial-promo.css
+++ b/pegasus/sites.v3/code.org/public/css/tutorial-promo.css
@@ -81,10 +81,6 @@
   .img-container {
     padding: 0px 5px;
   }
-
-  #starwars-mobile-image {
-    background-image: url(/images/fit-520/starwars_carousel_background.jpg);
-  }
 }
 
 @media screen and (min-width: 500px) and (max-width: 600px) {
